_generated-doc/3.34/config/quarkus-mailer.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-mailer_quarkus-mailer-cache-attachments]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-cache-attachments[`+++quarkus.mailer.cache-attachments+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.cache-attachments+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Caches data from attachment's Stream to a temporary file. It tries to delete it after sending email.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_CACHE_ATTACHMENTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_CACHE_ATTACHMENTS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

h|[[quarkus-mailer_section_quarkus-mailer]] [.section-name.section-level0]##link:#quarkus-mailer_section_quarkus-mailer[Additional named mailers]##
h|Type
h|Default

a| [[quarkus-mailer_quarkus-mailer-from]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-from[`+++quarkus.mailer.from+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.from+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".from+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".from+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets the default `from` attribute when not specified in the `io.quarkus.mailer.Mail` instance. It's the sender email address.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_FROM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_FROM+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-mailer_quarkus-mailer-mock]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-mock[`+++quarkus.mailer.mock+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.mock+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".mock+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".mock+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Enables the mock mode. When enabled, mails are not sent, but stored in an in-memory mailbox. The content of the emails is also printed on the console.

Disabled by default on PROD, enabled by default on DEV and TEST modes.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_MOCK+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_MOCK+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-mailer_quarkus-mailer-bounce-address]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-bounce-address[`+++quarkus.mailer.bounce-address+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.bounce-address+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".bounce-address+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".bounce-address+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets the default bounce email address. A bounced email, or bounce, is an email message that gets rejected by a mail server.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_BOUNCE_ADDRESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_BOUNCE_ADDRESS+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-mailer_quarkus-mailer-host]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-host[`+++quarkus.mailer.host+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.host+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".host+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".host+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets the SMTP host name.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_HOST+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++localhost+++`

a| [[quarkus-mailer_quarkus-mailer-port]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-port[`+++quarkus.mailer.port+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.port+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".port+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".port+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The SMTP port. The default value depends on the configuration. The port 25 is used as default when `ssl` is disabled. This port continues to be used primarily for SMTP relaying. SMTP relaying is the transmission of email from email server to email server. The port 587 is the default port when `ssl` is enabled. It ensures that email is submitted securely.

Note that the port 465 may be used by SMTP servers, however, IANA has reassigned a new service to this port, and it should no longer be used for SMTP communications.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_PORT+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-mailer_quarkus-mailer-username]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-username[`+++quarkus.mailer.username+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.username+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".username+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".username+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets the username to connect to the SMTP server.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_USERNAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-mailer_quarkus-mailer-password]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-password[`+++quarkus.mailer.password+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.password+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".password+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".password+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets the password to connect to the SMTP server.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-mailer_quarkus-mailer-tls-configuration-name]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-tls-configuration-name[`+++quarkus.mailer.tls-configuration-name+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.tls-configuration-name+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".tls-configuration-name+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".tls-configuration-name+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The name of the TLS configuration to use.

If a name is configured, it uses the configuration from `quarkus.tls.<name>.++*++` If a name is configured, but no TLS configuration is found with that name then an error will be thrown.

If no TLS configuration name is set then, the specific TLS configuration (from `quarkus.mailer.++*++`) will be used.

The default TLS configuration is *not* used by default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_TLS_CONFIGURATION_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_TLS_CONFIGURATION_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-mailer_quarkus-mailer-tls]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-tls[`+++quarkus.mailer.tls+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.tls+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".tls+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".tls+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Whether the connection should be secured using TLS.

SMTP allows establishing connection with or without TLS. When establishing a connection with TLS, the connection is secured and encrypted. When establishing a connection without TLS, it can be secured and encrypted later using the STARTTLS command. In this case, the connection is initially unsecured and unencrypted. To configure this case, set this property to `false` and `start-tls` to `REQUIRED` Note that if a TLS configuration is set, TLS is enabled automatically. So, setting this property to `false` is required to not establish a connection with TLS.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_TLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_TLS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-mailer_quarkus-mailer-max-pool-size]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-max-pool-size[`+++quarkus.mailer.max-pool-size+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.max-pool-size+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".max-pool-size+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".max-pool-size+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets the max number of open connections to the mail server.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_MAX_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_MAX_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|`+++10+++`

a| [[quarkus-mailer_quarkus-mailer-own-host-name]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-own-host-name[`+++quarkus.mailer.own-host-name+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.own-host-name+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".own-host-name+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".own-host-name+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets the hostname to be used for HELO/EHLO and the Message-ID.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_OWN_HOST_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_OWN_HOST_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-mailer_quarkus-mailer-keep-alive]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-keep-alive[`+++quarkus.mailer.keep-alive+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.keep-alive+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".keep-alive+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".keep-alive+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets if connection pool is enabled. If the connection pooling is disabled, the max number of sockets is enforced nevertheless.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_KEEP_ALIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_KEEP_ALIVE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a| [[quarkus-mailer_quarkus-mailer-disable-esmtp]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-disable-esmtp[`+++quarkus.mailer.disable-esmtp+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.disable-esmtp+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".disable-esmtp+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".disable-esmtp+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Disable ESMTP.

The RFC-1869 states that clients should always attempt `EHLO` as first command to determine if ESMTP is supported, if this returns an error code, `HELO` is tried to use the _regular_ SMTP command.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DISABLE_ESMTP+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DISABLE_ESMTP+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-mailer_quarkus-mailer-start-tls]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-start-tls[`+++quarkus.mailer.start-tls+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.start-tls+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".start-tls+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".start-tls+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets the TLS security mode for the connection. Either `DISABLED`, `OPTIONAL` or `REQUIRED`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_START_TLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_START_TLS+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++OPTIONAL+++`

a| [[quarkus-mailer_quarkus-mailer-dkim-enabled]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-dkim-enabled[`+++quarkus.mailer.dkim.enabled+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.dkim.enabled+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".dkim.enabled+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".dkim.enabled+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Enables DKIM signing.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-mailer_quarkus-mailer-dkim-private-key]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-dkim-private-key[`+++quarkus.mailer.dkim.private-key+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.dkim.private-key+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".dkim.private-key+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".dkim.private-key+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Configures the PKCS++#++8 format private key used to sign the email.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_PRIVATE_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_PRIVATE_KEY+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-mailer_quarkus-mailer-dkim-private-key-path]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-dkim-private-key-path[`+++quarkus.mailer.dkim.private-key-path+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.dkim.private-key-path+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".dkim.private-key-path+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".dkim.private-key-path+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Configures the PKCS++#++8 format private key file path.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_PRIVATE_KEY_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_PRIVATE_KEY_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-mailer_quarkus-mailer-dkim-auid]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-dkim-auid[`+++quarkus.mailer.dkim.auid+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.dkim.auid+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".dkim.auid+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".dkim.auid+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Configures the Agent or User Identifier (AUID).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_AUID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_AUID+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-mailer_quarkus-mailer-dkim-selector]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-dkim-selector[`+++quarkus.mailer.dkim.selector+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.dkim.selector+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".dkim.selector+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".dkim.selector+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Configures the selector used to query the public key.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_SELECTOR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_SELECTOR+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-mailer_quarkus-mailer-dkim-sdid]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-dkim-sdid[`+++quarkus.mailer.dkim.sdid+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.dkim.sdid+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".dkim.sdid+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".dkim.sdid+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Configures the Signing Domain Identifier (SDID).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_SDID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_SDID+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-mailer_quarkus-mailer-dkim-header-canon-algo]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-dkim-header-canon-algo[`+++quarkus.mailer.dkim.header-canon-algo+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.dkim.header-canon-algo+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".dkim.header-canon-algo+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".dkim.header-canon-algo+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Configures the canonicalization algorithm for signed headers.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_HEADER_CANON_ALGO+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_HEADER_CANON_ALGO+++`
endif::add-copy-button-to-env-var[]
--
a|`simple`, `relaxed`
|

a| [[quarkus-mailer_quarkus-mailer-dkim-body-canon-algo]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-dkim-body-canon-algo[`+++quarkus.mailer.dkim.body-canon-algo+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.dkim.body-canon-algo+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".dkim.body-canon-algo+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".dkim.body-canon-algo+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Configures the canonicalization algorithm for mail body.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_BODY_CANON_ALGO+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_BODY_CANON_ALGO+++`
endif::add-copy-button-to-env-var[]
--
a|`simple`, `relaxed`
|

a| [[quarkus-mailer_quarkus-mailer-dkim-body-limit]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-dkim-body-limit[`+++quarkus.mailer.dkim.body-limit+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.dkim.body-limit+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".dkim.body-limit+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".dkim.body-limit+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Configures the body limit to sign. Must be greater than zero.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_BODY_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_BODY_LIMIT+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-mailer_quarkus-mailer-dkim-signature-timestamp]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-dkim-signature-timestamp[`+++quarkus.mailer.dkim.signature-timestamp+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.dkim.signature-timestamp+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".dkim.signature-timestamp+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".dkim.signature-timestamp+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Configures to enable or disable signature sign timestamp.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_SIGNATURE_TIMESTAMP+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_SIGNATURE_TIMESTAMP+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-mailer_quarkus-mailer-dkim-expire-time]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-dkim-expire-time[`+++quarkus.mailer.dkim.expire-time+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.dkim.expire-time+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".dkim.expire-time+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".dkim.expire-time+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Configures the expire time in seconds when the signature sign will be expired. Must be greater than zero.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_EXPIRE_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_EXPIRE_TIME+++`
endif::add-copy-button-to-env-var[]
--
|long
|

a| [[quarkus-mailer_quarkus-mailer-dkim-signed-headers]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-dkim-signed-headers[`+++quarkus.mailer.dkim.signed-headers+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.dkim.signed-headers+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".dkim.signed-headers+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".dkim.signed-headers+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Configures the signed headers in DKIM, separated by commas. The order in the list matters.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_SIGNED_HEADERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_SIGNED_HEADERS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-mailer_quarkus-mailer-login]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-login[`+++quarkus.mailer.login+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.login+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".login+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".login+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets the login mode for the connection. Either `NONE`, `DISABLED`, `REQUIRED` or `XOAUTH2`.

 - NONE means a login will be attempted if the server supports it and login credentials are set
 - DISABLED means no login will be attempted
 - REQUIRED means that a login will be attempted if the server supports it and the send operation will fail otherwise
 - XOAUTH2 means that a login will be attempted using Google Gmail Oauth2 tokens


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_LOGIN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_LOGIN+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++NONE+++`

a| [[quarkus-mailer_quarkus-mailer-auth-methods]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-auth-methods[`+++quarkus.mailer.auth-methods+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.auth-methods+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".auth-methods+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".auth-methods+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets the allowed authentication methods. These methods will be used only if the server supports them. If not set, all supported methods may be used.

The list is given as a space separated list, such as `DIGEST-MD5 CRAM-SHA256 CRAM-SHA1 CRAM-MD5 PLAIN LOGIN`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_AUTH_METHODS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_AUTH_METHODS+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-mailer_quarkus-mailer-key-store-password]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-key-store-password[`+++quarkus.mailer.key-store-password+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.key-store-password+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".key-store-password+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".key-store-password+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets the trust store password if any.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_KEY_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_KEY_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-mailer_quarkus-mailer-truststore-password]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-truststore-password[`+++quarkus.mailer.truststore.password+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.truststore.password+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".truststore.password+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".truststore.password+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets the trust store password if any. Note that the password is only used for JKS and PCK++#++12 trust stores.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_TRUSTSTORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_TRUSTSTORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-mailer_quarkus-mailer-truststore-paths]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-truststore-paths[`+++quarkus.mailer.truststore.paths+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.truststore.paths+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".truststore.paths+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".truststore.paths+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets the location of the trust store files. If you use JKS or PCK++#++12, only one path is allowed. If you use PEM files, you can specify multiple paths.

The relative paths are relative to the application working directly.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_TRUSTSTORE_PATHS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_TRUSTSTORE_PATHS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-mailer_quarkus-mailer-truststore-type]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-truststore-type[`+++quarkus.mailer.truststore.type+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.truststore.type+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".truststore.type+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".truststore.type+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets the trust store type. By default, it guesses the type from the file name extension. For instance, `truststore.pem` will be seen as a PEM file, while `truststore.jks` will be seen as a JKS file. `truststore.p12` and `truststore.pfx` will both be seen as PKCS++#++12 files. Accepted values are: `JKS`, `PEM`, `PKCS`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_TRUSTSTORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_TRUSTSTORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-mailer_quarkus-mailer-multi-part-only]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-multi-part-only[`+++quarkus.mailer.multi-part-only+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.multi-part-only+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".multi-part-only+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".multi-part-only+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Whether the mail should always been sent as multipart even if they don't have attachments. When sets to true, the mail message will be encoded as multipart even for simple mails without attachments.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_MULTI_PART_ONLY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_MULTI_PART_ONLY+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-mailer_quarkus-mailer-allow-rcpt-errors]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-allow-rcpt-errors[`+++quarkus.mailer.allow-rcpt-errors+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.allow-rcpt-errors+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".allow-rcpt-errors+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".allow-rcpt-errors+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets if sending allows recipients errors. If set to true, the mail will be sent to the recipients that the server accepted, if any.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_ALLOW_RCPT_ERRORS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_ALLOW_RCPT_ERRORS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-mailer_quarkus-mailer-pipelining]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-pipelining[`+++quarkus.mailer.pipelining+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.pipelining+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".pipelining+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".pipelining+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Enables or disables the pipelining capability if the SMTP server supports it.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_PIPELINING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_PIPELINING+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a| [[quarkus-mailer_quarkus-mailer-pool-cleaner-period]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-pool-cleaner-period[`+++quarkus.mailer.pool-cleaner-period+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.pool-cleaner-period+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".pool-cleaner-period+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".pool-cleaner-period+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets the connection pool cleaner period. Zero disables expiration checks and connections will remain in the pool until they are closed.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_POOL_CLEANER_PERIOD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_POOL_CLEANER_PERIOD+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-mailer_quarkus-mailer[icon:question-circle[title=More information about the Duration format]]
|`+++1S+++`

a| [[quarkus-mailer_quarkus-mailer-keep-alive-timeout]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-keep-alive-timeout[`+++quarkus.mailer.keep-alive-timeout+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.keep-alive-timeout+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".keep-alive-timeout+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".keep-alive-timeout+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Set the keep alive timeout for the SMTP connection. This value determines how long a connection remains unused in the pool before being evicted and closed. A timeout of 0 means there is no timeout.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_KEEP_ALIVE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_KEEP_ALIVE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-mailer_quarkus-mailer[icon:question-circle[title=More information about the Duration format]]
|`+++300S+++`

a| [[quarkus-mailer_quarkus-mailer-ntlm-workstation]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-ntlm-workstation[`+++quarkus.mailer.ntlm.workstation+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.ntlm.workstation+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".ntlm.workstation+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".ntlm.workstation+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets the workstation used on NTLM authentication.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_NTLM_WORKSTATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_NTLM_WORKSTATION+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-mailer_quarkus-mailer-ntlm-domain]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-ntlm-domain[`+++quarkus.mailer.ntlm.domain+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.ntlm.domain+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".ntlm.domain+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".ntlm.domain+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets the domain used on NTLM authentication.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_NTLM_DOMAIN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_NTLM_DOMAIN+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-mailer_quarkus-mailer-approved-recipients]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-approved-recipients[`+++quarkus.mailer.approved-recipients+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.approved-recipients+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".approved-recipients+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".approved-recipients+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Allows sending emails to these recipients only.

Approved recipients are compiled to a `Pattern` and must be a valid regular expression. The created `Pattern` is case-insensitive as emails are case insensitive. Provided patterns are trimmed before being compiled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_APPROVED_RECIPIENTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_APPROVED_RECIPIENTS+++`
endif::add-copy-button-to-env-var[]
--
|list of link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/util/regex/Pattern.html[Pattern]
|

a| [[quarkus-mailer_quarkus-mailer-log-rejected-recipients]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-log-rejected-recipients[`+++quarkus.mailer.log-rejected-recipients+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.log-rejected-recipients+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".log-rejected-recipients+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".log-rejected-recipients+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Log rejected recipients as warnings.

If false, the rejected recipients will be logged at the DEBUG level.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_LOG_REJECTED_RECIPIENTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_LOG_REJECTED_RECIPIENTS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-mailer_quarkus-mailer-log-invalid-recipients]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-log-invalid-recipients[`+++quarkus.mailer.log-invalid-recipients+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.log-invalid-recipients+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".log-invalid-recipients+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".log-invalid-recipients+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Log invalid recipients as warnings.

If false, the invalid recipients will not be logged and the thrown exception will not contain the invalid email address.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_LOG_INVALID_RECIPIENTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_LOG_INVALID_RECIPIENTS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-mailer_quarkus-mailer-timeout]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-timeout[`+++quarkus.mailer.timeout+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.timeout+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".timeout+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".timeout+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets the timeout duration for blocking mailer operations. When using the blocking mailer (`io.quarkus.mailer.Mailer` interface), this timeout determines how long to wait for the mail to be sent before throwing a `java.util.concurrent.TimeoutException`.

This prevents indefinite thread blocking when SMTP servers are misconfigured or unreachable. A value of 0 means no timeout (wait indefinitely) - which is not recommended.

Default is 60 seconds.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-mailer_quarkus-mailer[icon:question-circle[title=More information about the Duration format]]
|`+++60S+++`

a| [[quarkus-mailer_quarkus-mailer-max-mails-per-connection]] [.property-path]##link:#quarkus-mailer_quarkus-mailer-max-mails-per-connection[`+++quarkus.mailer.max-mails-per-connection+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer.max-mails-per-connection+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.mailer."mailer-name".max-mails-per-connection+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.mailer."mailer-name".max-mails-per-connection+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets the max emails count per connection before it gets closed.

Some SMTP servers have the requirement to allow only a number of emails sent per connection.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_MAX_MAILS_PER_CONNECTION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_MAX_MAILS_PER_CONNECTION+++`
endif::add-copy-button-to-env-var[]
--
|long
|


|===

ifndef::no-duration-note[]
[NOTE]
[id=duration-note-anchor-quarkus-mailer_quarkus-mailer]
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() Java API documentation] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
